
   * Give proper warning message when running 'bzr svn-branching-scheme' on 
     something that is not a Subversion repository. (#145159)

   * Give proper warning message when running 'bzr svn-import' on 
     something that is not a Subversion repository. 

   * Support svn+ hack when committing in bound branches. (#150699)

  DOCUMENTATION

   * Add simple FAQ file. (#144388)

bzr-svn 0.4.3	2007-09-15
 
  PERFORMANCE

   * Avoid extra RA connection in LogWalker if it isn't going to be used.

  BUG FIXES

   * Fix determination of relative URLs in SvnRaTransport._request_path(). 
     (#139020)

   * Mark as compatible with Bazaar 0.91.

   * Use write groups in fetch as required by the packs branch.

   * Handle pushing merges of which LHS parent is older revision of 
     branch path.

  INTERNALS

   * Track moving parents correctly in follow_path().

   * Implement SvnWorkingTreeDir.needs_format_conversion().

bzr-svn 0.4.2	2007-09-09

  BUG FIXES

   * Fix regression that prevented the "svn+" prefix trick from working.

   * Export version information so the version is displayed properly 
     in "bzr plugins".

   * Avoid deprecated static BzrDir.create_repository().

   * Fix pushing of revisions of which only a non-left hand side parent
     is present in the Subversion repository. (#131692)

   * Fix some problems pushing to HTTP repositories because of 
     the backing URL hack introduced to fix #80553. (#137176)

   * Display unknown hostname errors properly without tracebacks.

   * Handle files of which path didn't change but parent did when pushing. 
     (#137455)

   * Fix sqlite index that was causing indexing errors when a repository 
     contains multiple copies of a single revision. 

bzr-svn 0.4.1	2007-08-26

  BUG FIXES

   * Convert errors to bzr errors when fetching data (avoids backtraces).

   * Raise proper exception when repository can't be found remotely. (#130633)

   * Use knits to store file id maps.
